<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true" >
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/register_activity_horizontal_margin"
        android:layout_marginTop="@dimen/register_activity_name_top_margin"
        android:layout_marginEnd="@dimen/register_activity_horizontal_margin"
        android:hint="@string/login_activity_name"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/login_activity_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_activity_margin_top_default"
        android:hint="@string/login_activity_email"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/login_activity_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_activity_margin_top_default"
        android:hint="@string/login_activity_password"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/login_activity_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_activity_margin_top_default"
        android:hint="@string/login_activity_repeat_password"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/login_activity_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/containedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_activity_register_button_bottom_margin"
        android:layout_marginTop="@dimen/button_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/button_color"
        android:text="@string/register_activity_register_button"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword"
        app:layout_constraintEnd_toEndOf="@id/tilName"
        app:layout_constraintStart_toStartOf="@id/tilName" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>